load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")

chromium_cc_library(
    name = "bind",
    testonly = True,
    srcs = ["bind.cc"],
    hdrs = ["bind.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/base:location",
        "//chromium/base/functional:bind",
        "//chromium/base/functional:callback",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_library(
    name = "copy_only_int",
    testonly = True,
    srcs = ["copy_only_int.cc"],
    hdrs = ["copy_only_int.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/base:no_destructor",
        "//chromium/base/functional:callback",
        "//chromium/third_party/abseil-cpp/absl/cleanup",
    ],
)

chromium_cc_library(
    name = "gmock_expected_support",
    testonly = True,
    hdrs = ["gmock_expected_support.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/base/strings:strcat",
        "//chromium/base/strings:to_string",
        "//chromium/base/types:expected",
        "//chromium/base/types:expected_macros",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_library(
    name = "gtest_util",
    testonly = True,
    hdrs = ["gtest_util.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/base:dcheck_is_on",
        "//chromium/build:build_config",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_library(
    name = "move_only_int",
    testonly = True,
    srcs = ["move_only_int.cc"],
    hdrs = ["move_only_int.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/base:no_destructor",
        "//chromium/base/functional:callback",
        "//chromium/third_party/abseil-cpp/absl/cleanup",
    ],
)

chromium_cc_library(
    name = "scoped_locale",
    testonly = True,
    srcs = ["scoped_locale.cc"],
    hdrs = ["scoped_locale.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/testing/gtest"],
)

chromium_cc_test(
    name = "gmock_expected_support_unittest",
    size = "small",
    srcs = ["gmock_expected_support_unittest.cc"],
    deps = [
        ":gmock_expected_support",
        "//chromium/base/types:expected",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)
