load("@bazel_skylib//lib:selects.bzl", "selects")

selects.config_setting_group(
    name = "is_clang",
    match_any = [
        "@rules_cc//cc/compiler:clang",
        "@rules_cc//cc/compiler:clang-cl",
        "@rules_cc//cc/compiler:emscripten",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "is_debug",
    values = {"compilation_mode": "dbg"},
    visibility = ["//visibility:public"],
)

selects.config_setting_group(
    name = "is_64bit",
    match_any = [
        "@platforms//cpu:aarch64",
        "@platforms//cpu:arm64e",
        "@platforms//cpu:armv8-m",
        "@platforms//cpu:cortex-r52",
        "@platforms//cpu:cortex-r82",
        "@platforms//cpu:mips64",
        "@platforms//cpu:ppc64le",
        "@platforms//cpu:riscv64",
        "@platforms//cpu:s390x",
        "@platforms//cpu:wasm64",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)
