load("//chromium:build_defs.bzl", "chromium_cc_library")

chromium_cc_library(
    name = "gtest",
    hdrs = ["include/gtest/gtest.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/third_party/googletest:gtest",
        "//chromium/third_party/googletest:gtest_main",
    ],
)

chromium_cc_library(
    name = "gtest_prod",
    hdrs = ["include/gtest/gtest_prod.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/third_party/googletest:gtest_prod"],
)
